# workProject

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  ceresnonlinear.hpp  contour.h  facemorph.cpp  facemorph.h  glmfunctions.cpp  glmfunctions.h  main.cpp  multifitting.cpp  multifitting.h  my3dmm.pro  priorcostcallback.cpp  priorcostcallback.h  shape.txt  test.cpp  test.h
common/: dataconvertor.h  eigenfunctions.h  knnsearch.cpp  knnsearch.h  raytriangleintersect.h  torchfunctions.cpp  torchfunctions.h
output/: TestObj.mtl  TestObj.npz
output2/: TestObj.npz
src/: Dlib.cpp  Dlib.h  EigenUtil.h  MMSolver.h  NumpyUtil.h  Poisson.h  PythonModule.cpp  cnpy.cpp  mmtensorsolver.h  pylib.cpp  stdafx.h
